2015-01-28  Charlie Zender  <zender@uci.edu>

	* Dynamically allocate dimension string info in nco_prn_var_dfn() so NCO works on AIRS files with loooong dimension names

2015-01-26  Charlie Zender  <zender@uci.edu>

	* Functionalize NSD algorithm into nco_var_bitmask()

	* Prototype NSD algorithm compiles, runs, and appears to work as expected

2015-01-25  Charlie Zender  <zender@uci.edu>

	* Demonstrate LSD failure on lsd_bgr, need real precision algorithm

	* Add LSD to ncpdq, document in nco.texi, regression tests

	* Move nco_lsd_att_prc() from main.c into nco_xtr_dfn() for maintainability

2015-01-22  Charlie Zender  <zender@uci.edu>

	* DYW added least_significant_digit attribute

2015-01-20  Charlie Zender  <zender@uci.edu>

	* Move DYW functions to new nco_sld.[ch] files

	* Use tgamma() instead of gamma() on MacOSX

	* Tidy --enable-custom warnings on clang

	* Fix automake error on in_4c.nc

2015-01-19  Charlie Zender  <zender@uci.edu>

	* Fix LSD on MM3 codepath by using brute force instead of hash table in trv_tbl_var_nm_fll()

2015-01-18  Charlie Zender  <zender@uci.edu>

	* Clean-up rx code for LSD by DYW

2015-01-16  Charlie Zender  <zender@uci.edu>

	* Deprecate -D_BSD_SOURCE -D_POSIX_SOURCE in favor of -D_DEFAULT_SOURCE in configure

	* Fix nco_var_typ_trv() prototype for C++ compilers

2015-01-14  Charlie Zender  <zender@uci.edu>

	* LSD implementation in MM3 code compiles cleanly yet has problem finding traversal objects

	* Introduce nco_var_around() calls in MM3 write/copy code

	* Patch nco_mss_val_get() to avoid invalid free()---now	nco_var_around() can work

	* Regressions now fixed. Failures may have been due to excessive .tmp files in regression directory.

2015-01-12  Charlie Zender  <zender@uci.edu>

	* Do not call nco_var_around when lsd == NC_MAX_INT, ensure lsd always initialized

	* Implement multiple LSD options by Dingying Wei (DYW). Currently broken.

	* Improve ISO8601 functionality with nco_cln_sng_rbs()
