@@ -1,4 +1,4 @@
-<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.944 2015-01-08 20:37:08 zender Exp $
+<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.945 2015-01-28 20:48:28 zender Exp $
 Purpose: NCO homepage
 
 URL:
@@ -638,7 +638,7 @@ netCDF4 compound types?;
 <a href="http://nco.sf.net/nco.html#cnk">Chunking</a> bytes not elements, caching;
 Optimize diskless files?</li>
 <li><b>NCO 4.4.8</b>: (<i>In Progress, features completed or being worked on include</i>)
-Specify lossy compression with <tt>--lsd</tt>;
+Lossy compression with <tt>--lsd</tt>;
 <tt>ncks</tt> prints human-legible ISO8601 dates;</li>
 <li><b>NCO 4.4.7</b>: (<i>Current Stable Release</i>)
 <tt>cnk_min</tt> minimum chunksize;
